# EasyGraphics

./: .gitignore  Makefile  README.md  build.sh
.cache/clangd/index/: _fixes.hpp.E2907480EB43D700.idx  (+383 more)
demo/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
demo/.cache/clangd/index/: demo_app.cpp.49D67D0B018DDB1F.idx  demo_app.h.5B4325104C8E8088.idx  demo_view.cpp.6359A873D7CCB419.idx  demo_view.h.95F4E7AA9F5D154E.idx  main.cpp.5A7BF0AAE9D284B0.idx  menu_view.cpp.EDB69346F0D29D38.idx  menu_view.h.C30A7D4602520AE3.idx  texture_view.cpp.1021C49CD8C4D3BF.idx  texture_view.h.D72081A13C5F4FE5.idx
demo/res/shaders/: depth_vertex.glsl  fragment.glsl  texture_fragment.glsl  texture_vertex.glsl  vertex.glsl
demo/src/: demo_app.cpp  demo_app.h  main.cpp
demo/src/views/: demo_view.cpp  demo_view.h  depth_view.cpp  depth_view.h  menu_view.cpp  menu_view.h  texture_view.cpp  texture_view.h
include/: application.h  easy_graphics.h  renderer.h  view.h
include/buffer/: draw_buffer.h  index_buffer.h  quad_buffer.h  vertex_array.h  vertex_buffer.h
include/res/: shader.h  texture.h
lib/mingw32/: EasyGraphics.lib
lib/mingw64/: EasyGraphics.lib
src/: application.cpp  application.h  renderer.cpp  renderer.h  vertex_layout.cpp  vertex_layout.h  view.cpp  view.h
src/buffer/: draw_buffer.cpp  index_buffer.cpp  index_buffer.h  quad_buffer.cpp  quad_buffer.h  static_draw_buffer.cpp  static_draw_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_layout.cpp
src/res/: material.cpp  material.h  shader.cpp  texture.cpp  texture.h
